--- a/style.css
+++ b/style.css
@@ -58,8 +58,12 @@ body{
     align-items: center;
     justify-content: space-between;
     padding: 20px 80px;
-    background: #FFF8E7;
+    background: #f2f2da;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
+    z-index: 999;
+    position: sticky;
+    top: 0;
+    left: 0;
 }
 
 #navbar{
@@ -100,12 +104,16 @@ body{
 
 /*Home Page*/
 #hero{
-    background-image: url('mn-dairy1.jpg');
+    background-image: url('images/test.jpg');
     background-size: cover;
-    height: 90vh;
+    background-repeat: no-repeat;
+    background-position: center center;
+    min-height: 100vh;
+    height: auto;
     width: 100%;
-    background-position: top 25% right 0;
-    padding: 0 80px;
+    background-position: center center;
+    /*background-position: top 25% right 0;*/
+    padding: 0 50px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -113,6 +121,30 @@ body{
 }
 
 #hero h1{
-    color:black;
+    color:rgb(244, 240, 240);
     
 }
+
+#hero p{
+    color: antiquewhite;
+}
+
+#hero button{
+    padding: 15px 30px;
+    background: linear-gradient(45deg, #f34f4dd6, #FF8E53);
+    color: #fff;
+    font-size: 20px;
+    border: none;
+    border-radius: 30px; 
+    cursor: pointer;
+    transition: background 0.3s ease, transform 0.2s ease;
+}
+
+#hero button:hover {
+    transform: translateY(-3px);
+    background: linear-gradient(45deg, #f75903, #f42121);
+  }
+  
+#hero button:active {
+    transform: translateY(0);
+  }
