--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body{
     align-items: center;
     justify-content: space-between;
     padding: 20px 80px;
-    background: #f2f2da;
+    background: #f5f5f5;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
     z-index: 999;
     position: sticky;
@@ -104,7 +104,7 @@ body{
 
 /*Home Page*/
 #hero{
-    background-image: url('images/test.jpg');
+    background-image: url('images/mn-dairy1.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -143,8 +143,42 @@ body{
 #hero button:hover {
     transform: translateY(-3px);
     background: linear-gradient(45deg, #f75903, #f42121);
-  }
+}
   
 #hero button:active {
     transform: translateY(0);
-  }
+}
+
+#feature{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+#feature .fe-box{
+    width: 200px;
+    text-align: center;
+    padding: 25px 15px;
+    box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
+    border: 1px solid #cce7d0;
+    border-radius: 4px;
+    margin: 15px 0;
+}
+
+#feature .fe-box:hover{
+    box-shadow: 10px 10px 54px rgba(70, 62, 221, 0.1);
+}
+
+#feature .fe-box img{
+    width: 100%;
+    margin-bottom: 10px;
+}
+#feature .fe-box h6{
+    display: inline-block;
+    padding: 9px 8px 6px 8px;
+    line-height: 1;
+    border-radius: 4px;
+    color: #fffcfc;
+    background-color: #d7221c;
+}
