--- a/style.css
+++ b/style.css
@@ -314,5 +314,50 @@ footer .copyright{
     position: absolute;
     bottom: 20px;
     right: 10px;
+}
 
+/* single product */
+#prodetails{
+    display: flex;
+    margin-top: 20px;
+}
+
+#prodetails .single-pro-image{
+    width: 40%;
+    margin-right: 50px;
+}
+
+#prodetails .single-pro-details{
+    width: 50%;
+    padding-top: 30px;
+}
+
+#prodetails .single-pro-details h4{
+    padding: 40px 0 20px 0;
+}
+
+#prodetails .single-pro-details  input{
+    width: 50px;
+    height: 47px;
+    padding-left: 10px;
+    font-size: 16px;
+    margin-right: 10px;
+}
+
+#prodetails .single-pro-details  input:focus{
+    outline: none;
+}
+
+#prodetails .single-pro-details .normal {
+    border: 0px solid #000; 
+    padding: 18px 20px; 
+    background-color: #ff0000;
+    color: #fbf9f9; 
+    font-weight: bold;
+    cursor: pointer; 
+}
+
+
+#prodetails .single-pro-details span{
+    line-height: 25px;
 }
